fix: add gap to the leftContent header

--- a/src/components/common/header/header.module.css
+++ b/src/components/common/header/header.module.css
@@ -15,6 +15,7 @@
   justify-content: space-evenly;
   padding: 0 4em;
   padding-left: 10vw;
+  gap: 2rem;
 }
 
 .list {
